finished site plan

--- a/siteplan/siteplan.html
+++ b/siteplan/siteplan.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    
   <head>
     <meta charset="utf-8">
-    <title>Site Plan</title>
+    <title>Portfolio Site Plan</title>
     <link type="text/css" rel="stylesheet" href="css/siteplan.css">
   </head>
 
@@ -12,15 +11,12 @@
       <h1>Portfolio Site Plan</h1>
       <h2>Levi Jones</h2>
       <h2>WDD 130-3</h2>
-      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
-
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <p>To make an impressive and informative portfolio website</p>
-
 
       <h3>Audience</h3>
       <p>Potential employers</p>
@@ -34,19 +30,12 @@
       <h2>Style Guide</h2>
 
       <h3>Color Palette</h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-      <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
       Palette URL: <a href="https://coolors.co/fffc4d-333333-4b4b4b-fffebb" target="_blank">https://coolors.co/fffc4d-333333-4b4b4b-fffebb</a>
-
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
-        <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr><td class="primary">#fffc4d</td><td class="secondary">#333333</td><td class="accent1">#4b4b4b</td><td class="accent2">#fffebb</td></tr>
       </table>
-
-      <!-- ------------------------Step 9------------------------------ -->
 
       <h3>Typography</h3>
       <h4>Heading Font: Quicksand</h4>
@@ -60,14 +49,12 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       </p>
 
-      <!-- ------------------------Step 10------------------------------ -->
-
       <h3>Navigation</h3>
       <nav>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <a href="#">Resume</a>
-        <a href="#">Portfolio</a>
+        <a href="#">Resumé</a>
+        <a href="#">Projects</a>
       </nav>
       <hr>
       <h2>
@@ -76,72 +63,105 @@
       <div class="sitemap">
         <div class="sm-home">About</div>
         <div class="sm-page2">Contact</div>
-        <div class="sm-page3">Resume</div>
-        <div class="sm-page4">Portfolio</div>
+        <div class="sm-page3">Resumé</div>
+        <div class="sm-page4">Projects</div>
 
-        <div class="top">
-          &nbsp;
-        </div>
-        <div class="left">
-          &nbsp;
-        </div>
-        <div class="right">
-          &nbsp;
-        </div>
-
+        <div class="top">&nbsp;</div>
+        <div class="left">&nbsp;</div>
+        <div class="right">&nbsp;</div>
+        <div class="bottom">&nbsp;</div>
       </div>
 
-      <!-- --------Content Section -------------- -->
       <hr>
-      <h2>
-        Content
-      </h2>
-      <h3>Home page</h3>
+      <h2>Content</h2>
+      <h3>About page</h3>
+      <h4>Introduction</h4>
       <p>
-        [Written copy for the home page here]
+        My name is Levi Jones. I am a front and back-end developer currently going to school in Rexburg, ID.
+        I love solving problems in creative ways and am always looking to learn new things.
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
-      </ul>
-      <h3>[Page 2]</h3>
+      <h4>Skills</h4>
       <p>
-        [Written copy for the Page 2 here]
+        Front-end: I have a strong background in HTML, CSS, and JavaScript. I have worked with jQuery and Bootstrap<br>
+        Back-end: I have experience with MySQL, C, Python, C#, and have used Firebase and AWS<br>
+        Testing: I have written many automated unit tests using Selenium and Python<br>
+        Games: I have worked with Unity and Unreal Engine, building to PC and Android, and have used Blender to make 3D models and rig for animation<br>
+        I am fluent with the git and GitHub workflows, and am very comfortable with the Linux command line.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
-      </ul>
-      <h3>[Page 3]</h3>
+      <h4>Goals</h4>
       <p>
-        [Written copy for the Page 3 here]
+        I am looking to get a job doing programming where I can stretch myself and learn new things every day.<br>
+        I would love to work on a team where I can work on a variety of projects.<br>
+        I am passionate about front-end design and game development.
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+      <p>Images for the About page</p>
+      <ul>
+        <p>Picture of me</p>
+        <img src="../img/web-trifecta_html5.svg" alt="HTML CSS JS" width="400">
+        <img src="../img/mysql.png" alt="Mysql" width="400">
+        <img src="../img/python.png" alt="Python" width="400">
+        <img src="../img/c.png" alt="C" width="400">
+        <img src="../img/cs.svg" alt="C Sharp" width="400">
+        <img src="../img/firebase.png" alt="C Sharp" width="400">
       </ul>
+      <h3>Contact</h3>
+      <h4>My contact info</h4>
+      <p>
+        I'd love to hear from you!<br>
+        You can contact me at my personal email: <a target="_blank" href="mailto:leviwill.j@gmail.com">leviwill.j@gmail.com</a><br>
+        Connect with me on LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/levi-jones/">https://www.linkedin.com/in/levi-jones</a>
+      </p>
+      <p>Images for the Contact page</p>
+      <ul>
+        <p>Picture of me</p>
+        <p>Background image for contact form</p>
+      </ul>
+      <h3>Resumé</h3>
+      <h4>My Resumé</h4>
+      <p>
+        * Here is where a pdf viewer of my resume will be displayed *
+      </p>
+      <p>Images for the Resumé page</p>
+      <ul>
+        <p>Resumé icon</p>
+      </ul>
+      <h3>Projects</h3>
+      <h4>My Resumé</h4>
+      <p>
+        I always have a personal project I'm working on!<br>
+        Here are some of the ones I'm especially proud of:
+        <ul>
+          <li>
+            Roof Runner: This is a game for Android that I developed from scratch and published to the Google Play Store
+          </li>
+          <li>
+            EventRex: A social events app I developed with a team in a week where users can create and find events going on in their area.
+          </li>
+          <li>
+            LMMS: An open-source music production tool that I've used and made multiple contributions to
+          </li>
+        </ul>
+      </p>
+      <p>Images for the Projects page</p>
+      <ul>
+        <p>Screenshot from game</p>
+        <p>Screenshot from EventRex</p>
+        <p>Screenshot from LMMS GitHub</p>
+      </ul>
+
       <hr>
-      <h2>
-        Wireframes
-      </h2>
-      <p>
-        Create three wireframes for your site. One for each page and list them here</p>
-
+      <h2>Wireframes</h2>
+      <p>Create three wireframes for your site. One for each page and list them here</p>
       <h3>Home</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="#" alt="home page wireframe">
-
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
-
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
@@ -149,5 +169,4 @@
       <img src="#" alt="page 3 wireframe">
     </main>
   </body>
-
 </html>
