--- a/siteplan/siteplan.html
+++ b/siteplan/siteplan.html
@@ -152,21 +152,26 @@
       <hr>
       <h2>Wireframes</h2>
       <p>Create three wireframes for your site. One for each page and list them here</p>
-      <h3>Home</h3>
+      <h3>About</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        this is the home page. it explains who I am and what I do.
       </p>
-      <img src="#" alt="home page wireframe">
-      <h3>[Page 2]</h3>
+      <img src="img/about.png" alt="home page wireframe">
+      <h3>contact</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        this page contains a form to send an email to me
       </p>
-      <img src="#" alt="page 2 wireframe">
-      <h3>[Page 3]</h3>
+      <img src="img/contact.png" alt="page 2 wireframe">
+      <h3>projects</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This page will show projects that I have worked on and will have links to my github
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="img/projects.png" alt="page 3 wireframe">
+      <h3>Resumé</h3>
+      <p>
+        This page will have my resume in a viewable format and a download button for the pdf
+      </p>
+      <img src="img/resume.png" alt="page 4 wireframe">
     </main>
   </body>
 </html>
