Created animated slides for main page, fixed colors on other pages

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <h2>EventRex</h2>
                 <p>EventRex is the social events website that I developed in a week with a small team for a school hackathon.</p>
-                <a href="github">Link to the github</a>
+                <a href="https://github.com/leviwj/hackathon">Link to the github</a>
             </div>
         </div>
     </main>
