--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/colors.css">
     <link rel="stylesheet" href="css/headerfooter.css">
     <link rel="stylesheet" href="css/about.css">
-    <script src="js/slides.js"></script>
     <title>Levi Jones</title>
 </head>
 
@@ -19,47 +19,50 @@
     </header>
 
     <main>
-        <div class="maincol">
-            <div id="slides">
-                <div class="slide">
-                    <img src="#" alt="Picture of me">
+        <div class="scrollshow">
+            <div class="slide" data-animation="fade-in">
+                <div class="leftcol">
                     <h1>About Me</h1>
-                    <p>
-                        I am a full stack web developer with a passion for learning and creative problem solving. I have a background in web development, cgi backends, and mysql. and I am currently pursuing a degree in Computer Information Technology. I am 
-                        looking for a position in the software development field.
-                    </p>
+                    <p>I am a full stack developer with a passion for learning and creating new things.</p>
                 </div>
-                <div class="slide hidden">
-                    <img src="img/web-trifecta_html5.svg" alt="Web Technologies">
-                    <h1>HTML, CSS, and JS</h1>
-                    <p>
-                        I have extensive experience with writing function webpages from scratch in HTML, CSS, and JavaScript. I have used JavaScript to interact with front-end and back-end apis and have created many responsive websites..
-                    </p>
-                </div>
-                <div class="slide hidden">
-                    <img src="img/c.png" alt="C Programming Language">
-                    <h1>C Programming</h1>
-                    <p>
-                        At Medical Informatics Engineering I have used C to do CGI programming, making scripts that output webpages and interact with mysql databases.
-                    </p>
-                </div>
-                <div class="slide hidden">
-                    <img src="img/python.png" alt="Python Programming Language">
-                    <h1>Python</h1>
-                    <p>
-                        I have experience in python from writing scripts, developing unit tests using Selenium Webdriver, and creating video games using pygame.
-                    </p>
-                </div>
-                <div class="slide hidden">
-                    <img src="img/cs.svg" alt="C# Programming Language">
-                    <h1>C# And Unity</h1>
-                    <p>
-                        I've used Unity3D and C# to create games for multiple platforms, such as for Windows and Android.
-                    </p>
-                </div>
+                <img src="img/me.jpg" alt="Picture of me">
             </div>
-            <button class="slideshowButton" onclick="slides.changeSlide(-1)">&#10094;</button>
-            <button class="slideshowButton" onclick="slides.changeSlide(1)">&#10095;</button>
+
+            <div class="slide inverted" data-animation="fade-in">
+                <div class="leftcol">
+                    <h1>HTML, CSS, and JS</h1>
+                    <p>I have experience with writing responsive webpages from scratch in HTML, CSS, and
+                        JavaScript.</p>
+                </div>
+                <img src="img/web-trifecta_html5.svg" alt="Web Technologies" data-animation="spin-grow">
+            </div>
+
+            <div class="slide blue" data-animation="slide-left">
+                <div class="leftcol">
+                    <h1>C Programming</h1>
+                    <p>I have used C to create CGI webpages that interact with mysql databases.</p>
+                </div>
+                <img src="img/c.png" alt="C Programming Language">
+            </div>
+
+            <div class="slide lblue" data-animation="fade-in">
+                <div class="leftcol">
+                    <h1>Python</h1>
+                    <p>I have experience in python from writing scripts, developing unit tests using Selenium Webdriver,
+                        and
+                        creating video games using pygame.</p>
+                </div>
+                <img src="img/python.png" alt="Python Programming Language">
+            </div>
+
+            <div class="slide purple" data-animation="fade-up">
+                <div class="leftcol">
+                    <h1>C# And Unity</h1>
+                    <p>I've used Unity3D and C# to create games for multiple platforms, such as for Windows and Android.
+                    </p>
+                </div>
+                <img src="img/cs.svg" alt="C# Programming Language">
+            </div>
         </div>
     </main>
 
@@ -67,5 +70,9 @@
         <p>&copy; Levi Jones 2021</p>
         <a href="siteplan/siteplan.html">Site Plan</a>
     </footer>
+
+
+    <script src="js/scrollslides.js"></script>
 </body>
+
 </html>
