improved contact page

--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
 
     <main>
         <div class="maincol">
-            <form id="contact" action="#" method="post">
-                <label for="name">Name:</label> <input type="text" class="contactInput" name="name" id="name"/>
-                <label for="email">Email:</label> <input type="email" class="contactInput" name="email" id="email"/>
-                <label for="message">Message:</label> <textarea name="message" class="contactInput" id="message"></textarea>
-                <input type="submit" value="Send"/>
+            <form id="contact" action="#">
+                <div><label for="name">Name:</label> <input type="text" class="contactInput" name="name" id="name"/></div>
+                <div><label for="email">Email:</label> <input type="email" class="contactInput" name="email" id="email"/></div>
+                <div><label for="message">Message:</label> <textarea name="message" class="contactInput" id="message"></textarea></div>
+                <div><input id="sendbtn" type="submit" value="Send"/></div>
             </form>
         </div>
     </main>
