--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" class="active">About</a>
         <a href="contact.html">Contact</a>
-        <a href="resume.html">Resumé</a>
+        <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
     </header>
 
@@ -23,9 +23,10 @@
             <div class="slide" data-animation="fade-in">
                 <div class="leftcol">
                     <h1>About Me</h1>
+                    <h2 style="margin-top: 2.5em">My name is Levi Jones</h2>
                     <p>I am a full stack developer with a passion for learning and creating new things.</p>
                 </div>
-                <img src="img/me.jpg" alt="Picture of me">
+                <img id="profilepic" src="img/me.jpg" alt="Picture of me">
             </div>
 
             <div class="slide inverted" data-animation="fade-in">
@@ -49,8 +50,7 @@
                 <div class="leftcol">
                     <h1>Python</h1>
                     <p>I have experience in python from writing scripts, developing unit tests using Selenium Webdriver,
-                        and
-                        creating video games using pygame.</p>
+                        and creating video games using pygame.</p>
                 </div>
                 <img src="img/python.png" alt="Python Programming Language">
             </div>
@@ -71,8 +71,6 @@
         <a href="siteplan/siteplan.html">Site Plan</a>
     </footer>
 
-
     <script src="js/scrollslides.js"></script>
 </body>
-
 </html>
