added to main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/colors.css">
     <link rel="stylesheet" href="css/headerfooter.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Levi Jones</title>
 </head>
 
@@ -26,7 +26,7 @@
                     <h2 style="margin-top: 2.5em">My name is Levi Jones</h2>
                     <p>I am a full stack developer with a passion for learning and creating new things.</p>
                 </div>
-                <img id="profilepic" src="img/me.jpg" alt="Picture of me">
+                <img id="profilepic" src="img/me.webp" alt="Picture of me">
             </div>
 
             <div class="slide inverted" data-animation="fade-in">
@@ -38,12 +38,13 @@
                 <img src="img/web-trifecta_html5.svg" alt="Web Technologies" data-animation="spin-grow">
             </div>
 
-            <div class="slide blue" data-animation="slide-left">
+            <div class="slide wide blue" data-animation="slide-left">
                 <div class="leftcol">
                     <h1>C Programming</h1>
                     <p>I have used C to create CGI webpages that interact with mysql databases.</p>
                 </div>
                 <img src="img/c.png" alt="C Programming Language">
+                <img src="img/mysql.png" alt="C Programming Language">
             </div>
 
             <div class="slide lblue" data-animation="fade-in">
@@ -58,10 +59,17 @@
             <div class="slide purple" data-animation="fade-up">
                 <div class="leftcol">
                     <h1>C# And Unity</h1>
-                    <p>I've used Unity3D and C# to create games for multiple platforms, such as for Windows and Android.
-                    </p>
+                    <p>I've used Unity3D and C# to create games for multiple platforms, such as for Windows and Android.</p>
                 </div>
                 <img src="img/cs.svg" alt="C# Programming Language">
+            </div>
+
+            <div class="slide navy" data-animation="fade-up">
+                <div class="leftcol">
+                    <h1>Firebase and Google APIs</h1>
+                    <p>I've implemented Firebase backends for websites, used OAuth for authentication, and the maps API</p>
+                </div>
+                <img src="img/firebase.png" alt="Firebase logo">
             </div>
         </div>
     </main>
