more site sections

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="img/cs.svg" alt="C# Programming Language">
             </div>
 
-            <div class="slide navy" data-animation="fade-up">
+            <div class="slide navy" data-animation="fade-in">
                 <div class="leftcol">
                     <h1>Firebase and Google APIs</h1>
                     <p>I've implemented Firebase backends for websites, used OAuth for authentication, and the maps API</p>
