--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 <div><label for="name">Name:</label> <input type="text" class="contactInput" name="name" id="name"/></div>
                 <div><label for="email">Email:</label> <input type="email" class="contactInput" name="email" id="email"/></div>
                 <div><label for="message">Message:</label> <textarea name="message" class="contactInput" id="message"></textarea></div>
-                <div><input id="sendbtn" type="submit" value="Send"/></div>
+                <div><input class="btn" type="submit" value="Send"/></div>
             </form>
         </div>
     </main>
