--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 
     <main>
         <div class="maincol">
-            <a href="resume.pdf" download="resume.pdf"><button class="btn">Download Resumé</button></a>
+            <a href="resume.pdf" download="resume.pdf"><div class="btn">Download Resumé</div></a>
             <iframe style="width:100%;min-height:50em;" src="https://docs.google.com/document/d/e/2PACX-1vRWyJUsVRixUj7On04b5HbCGeW19-Vijyj-3O_vNP1eXZKEtq1QiIdXW9q-vdnlhZJ-BoWpedv3jmaZ/pub?embedded=true"></iframe>
         </div>
     </main>
