made projects page more interesting

--- a/projects.html
+++ b/projects.html
@@ -23,17 +23,17 @@
             <div class="card">
                 <h2>Roof Runner</h2>
                 <p>Roof Runner is the Android game that I developed in Unity3D and published to the Play Store.</p>
-                <a href="https://github.com/leviwj/roofrunner">Github</a>
+                <a href="https://github.com/leviwj/roofrunner"><img src="img/github.png" alt="Github" width="50"/></a>
             </div>
             <div class="card">
                 <h2>LMMS</h2>
                 <p>LMMS is the open-source Digital Audio Workstation that I've both produced music in and made code contributions to.</p>
-                <a href="https://github.com/LMMS/lmms">Github</a>
+                <a href="https://github.com/LMMS/lmms"><img src="img/github.png" alt="Github" width="50"/></a>
             </div>
             <div class="card">
                 <h2>EventRex</h2>
                 <p>EventRex is the social events website that I developed in a week with a small team for a school hackathon.</p>
-                <a href="https://github.com/leviwj/hackathon">Github</a>
+                <a href="https://github.com/leviwj/hackathon"><img src="img/github.png" alt="Github" width="50"/></a>
             </div>
         </div>
     </main>
